fix: cluster dropdown extra margin
Remove extra margin on cluster dropdown

Closes DCOS-39963

--- a/src/styles/components/user-account-dropdown/styles.less
+++ b/src/styles/components/user-account-dropdown/styles.less
@@ -84,6 +84,10 @@
       display: none;
     }
 
+    li:empty + .dropdown-menu-section-header {
+      margin-top: 0;
+    }
+
     &-public-ip {
 
       li& {
